lab4/k8s/order-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: order-service               # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: order-service               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: smoothoperator228/orderservice:latest       # образ Docker
          imagePullPolicy: IfNotPresent
          name: order-service           # ім'я контейнеру
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди
