lab4/k8s/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-service
spec:
  type: ClusterIP
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 8080 # порт контейнера
     # nodePort: 32001 # порт на якому буде доступний сервіс ззовні
  selector:
    app: order-service
